--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 #root{
+    --button-color: #C2E7FF;
+    --button-hover: rgb(131, 131, 211);
     --box-color: #ffffff;
     --text-color: #81898D;
     --box-shadow: -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
@@ -18,6 +20,9 @@
     justify-content: center;
     gap: 1rem;
 }
+
+
+/* ------------------------------------------PHRASES-------------------------------------- */
 
 .phrases{
     background-color: var(--box-color);
@@ -43,12 +48,15 @@ box-shadow: 10px 10px 5px 0px rgba(12, 128, 136, 0.75);
 
 }
 
+
+/* --------------------------------------QUOTE-ICONS--------------------------------------- */
+
 .bxs-quote-alt-right{
     display: flex;
     position: relative;
     font-size: 50px;
-    bottom: 100px;
-    left: 170px;
+    bottom: 90px;
+    left: 180px;
     color: var(--text-color);
 }
 
