change phrases in media query

--- a/src/index.css
+++ b/src/index.css
@@ -57,9 +57,10 @@ button:hover{
     body {
         margin: 0;
     }
-.phrases{    max-width: 350px;
+.phrases{    
+    max-width: 450px;
     max-height: 50px;
-    min-width: 350px;
+    min-width: 450px;
     min-height: 50px;}
 
 
