change media query max width

--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ button:hover{
     }
 
 
-@media (min-width : 700px){
+@media (max-width : 700px){
     .phrases{    
         max-width: 450px;
         max-height: 50px;
